--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </ul>
     </div>
     <div class="container">
-      <p>Hola Mundo, este es un cambio sincronizado con git y GitHub 1</p>
+      <p>Hola Mundo, este es un ejemplo sincronizado con git y GitHub 1</p>
       <div class="actions">
         <button>Este es un botón verde</button>
       </div>
