--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       </ul>
     </div>
     <div class="container">
-      <p>Hola Mundo, este es un ejemplo sincronizado con git y GitHub 1</p>
+      <p>este es un ejemplo sincronizado con git y GitHub</p>
       <div class="actions">
-        <button>Este es un botón verde</button>
+        <button>Este es un botón rosa</button>
       </div>
     </div>
   </body>
