--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="container">
       <p>este es un ejemplo sincronizado con git y GitHub</p>
       <div class="actions">
-        <button>Este es un botón rosa</button>
+        <button>Este es un botón verde</button>
       </div>
     </div>
   </body>
