Agregar texto principal del texto

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       </ul>
     </div>
     <div class="container">
-      <p>este es un ejemplo sincronizado con git y GitHub</p>
+      <p>este es el segundo ensayo con git y GitHub</p>
       <div class="actions">
         <button>Este es un botón verde</button>
       </div>
